--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,18 +4,17 @@ import ContextAlert from '../components/ContextAlert.astro';
 import Markdown from '../components/Markdown.astro';
 
 const explainer = `
-An Astro website can go way beyond static pages - on the right platform.
+Inovasi terkuat sejagat raya, bisa memusnahkan seluruh mahluk jahanam.
 
-Netlify supports not only [Streaming SSR](https://docs.astro.build/en/guides/server-side-rendering/#html-streaming) and fast [Edge Middleware](https://docs.astro.build/en/guides/middleware/), but also [on-demand revalidation](https://www.netlify.com/blog/cache-tags-and-purge-api-on-netlify/) and [stale-while-revalidate](https://www.netlify.com/blog/swr-and-fine-grained-cache-control/). 
-Any page or data can be rebuilt only when needed, without site visitors ever getting a performance hit.
+Inovasi terkuat ini tidak hanya memusnahkan mahluk jahanam, tapi sampai bisa memusnahkan [raja iblis](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaLQMA6ODdlorDXMZ87mo5rVTHklR-9_38xQ&s) dan [sadboy tingkat dewa](https://i.scdn.co/image/ab67616d0000b2737e638435b9596886d5a02f9d)
 `;
 ---
 
 <Layout title="Welcome to Astro.">
     <ContextAlert class="mb-8" />
-    <h1 class="mb-10">Netlify Platform Starter for Astro</h1>
+    <h1 class="mb-10">Natriplast: dij iwjal deo</h1>
     <Markdown content={explainer} class="mb-10 text-lg" />
     <p>
-        <a href="https://docs.netlify.com/frameworks/astro/" class="btn btn-lg sm:min-w-64">Read the Docs</a>
+        <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg sm:min-w-64">Download Essay Natriplast</a>
     </p>
 </Layout>
