--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ Inovasi terkuat ini tidak hanya memusnahkan mahluk jahanam, tapi sampai bisa mem
 `;
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="This is Natriplast.">
     <ContextAlert class="mb-8" />
     <h1 class="mb-10">Natriplast: dij iwjal deo</h1>
     <Markdown content={explainer} class="mb-10 text-lg" />
