--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,4 +17,7 @@ Inovasi terkuat ini tidak hanya memusnahkan mahluk jahanam, tapi sampai bisa mem
     <p>
         <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg sm:min-w-64">Download Essay Natriplast</a>
     </p>
+    <p>
+        <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg sm:min-w-64">Download Aplikasi Natriplast</a>
+    </p>
 </Layout>
