--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ const navItems = [
 ---
 
 <nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
-    <a href="/">
-        <Logo />
-    </a>
+<a href="/">
+  <img src="/logo.svg" alt="Logo" class="h-8 w-auto" />
+</a>
     {
         !!navItems?.length && (
             <ul class="flex flex-wrap gap-x-4 gap-y-1">
