--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,6 @@
 
 <footer class="pt-16 pb-12 sm:pt-24 sm:pb-16">
     <p class="text-sm">
-        <a href="https://wa.me/<nomor>?text=Hai%20kak!%20Saya%20mau%20bertanya%20dong%20tentang%20...%20" class="decoration-dashed text-primary underline-offset-8"> Hubungi Kami </a>
+        <a href="https://wa.me/6282149652660?text=Hai%20kak!%20Saya%20mau%20bertanya%20dong%20tentang%20...%20" class="decoration-dashed text-primary underline-offset-8"> Hubungi Kami </a>
     </p>
 </footer>
