--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Logo from '../components/Logo.astro';
 
 const navItems = [
     { linkText: 'Home', href: '/' },
-    { linkText: 'About Us', href: '/blobs' }
+    { linkText: 'About Us', href: '/' }
 ];
 ---
 
