--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const navItems = [
 
 <nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
 <a href="/">
-  <img src="/logo.svg" alt="Logo" class="h-8 w-auto" />
+  <img src="/Logo.svg" alt="Logo" class="h-8 w-auto" />
 </a>
     {
         !!navItems?.length && (
