--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,8 @@ Inovasi terkuat ini tidak hanya memusnahkan mahluk jahanam, tapi sampai bisa mem
     <ContextAlert class="mb-8" />
     <h1 class="mb-10">Natriplast: dij iwjal deo</h1>
     <Markdown content={explainer} class="mb-10 text-lg" />
-    <p>
+<div class="flex gap-4 mt-6">
         <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg sm:min-w-64">Download Essay Natriplast</a>
-    </p>
-    <p>
-        <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg sm:min-w-64">Download Aplikasi Natriplast</a>
-    </p>
+<a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg sm:min-w-64">Download Aplikasi Natriplast</a>
+</div>
 </Layout>
