--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,13 +5,11 @@
     --color-primary: #f67280;
     --color-primary-content: #101828;
     --color-complementary: #355c7d;
---background-image-noise: 
-    linear-gradient(
+--background-image-noise: linear-gradient(
         to bottom,
-        rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0.9) 100%
+        color-mix(in oklab, var(--color-gray-950) 0%, transparent),
+        color-mix(in oklab, var(--color-gray-950) 100%, transparent)
     ),
-    url('/images/background.jpg'),
     url('/images/noise.png');
 }
 
