--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,10 @@
     --color-primary: #f67280;
     --color-primary-content: #101828;
     --color-complementary: #355c7d;
---background-image-noise: linear-gradient(
-        to bottom,
-        color-mix(in oklab, var(--color-gray-950) 0%, transparent),
-        color-mix(in oklab, var(--color-gray-950) 100%, transparent)
-    ),
-    url('/images/noise.png');
+--background-image-noise:
+  linear-gradient(to bottom, rgba(53,92,125,0.8), rgba(0,0,0,0.95)),
+  url('/images/noise.png');
+
 }
 
 @layer base {
