--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ Inovasi terkuat ini tidak hanya memusnahkan mahluk jahanam, tapi sampai bisa mem
     <ContextAlert class="mb-8" />
     <h1 class="mb-10">Natriplast: dij iwjal deo</h1>
     <Markdown content={explainer} class="mb-10 text-lg" />
-<div class="flex gap-4 mt-8">
+<div class="flex flex-col gap-4 mt-8">
 <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg">Download Essay Natriplast</a>
 <a href="https://social.mtdv.me/watch?v=natriplast-essay" class="btn btn-lg">Download Aplikasi Natriplast</a>
 </div>
