--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,10 @@ import Logo from '../components/Logo.astro';
 
 const navItems = [
     { linkText: 'Home', href: '/' },
-    { linkText: 'About Us', href: '/' }
+    { linkText: 'Info Terkait', href: '/info' },
+    { linkText: 'Statistik', href: '/statistik' },
+    { linkText: 'Tips Kesehatan', href: '/tips' },
+    { linkText: 'About Us', href: '/about' }
 ];
 ---
 
